--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rxjs-hooks",
-  "version": "0.7.0",
+  "name": "rxjs-enhanced-hooks",
+  "version": "0.1.0",
   "description": "React hooks for RxJS",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
